Fox code generation module